# django-superform

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  requirements.txt  run  runtests.py  setup.cfg  setup.py  setup.py.bak  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml  test.yaml
django_compositeform/: __init__.py  boundfield.py  fields.py  forms.py  widgets.py
django_superform/: __init__.py  boundfield.py  fields.py  forms.py  widgets.py
django_superform/templates/superform/: formsetfield.html
docs/: Makefile  boundfield.rst  conf.py  fields.rst  forms.rst  howitworks.rst  index.rst  install.rst  make.bat  quickstart.rst
requirements/: development.txt  tests.txt
tests/: compositeform.py  models.py  requirements.txt  settings.py  test_boundfield.py  test_compositeform.py  test_formfield.py  test_formsetfield.py  test_global_exports.py  test_media.py  test_modelformfield.py  test_superform.py  test_widgets.py  tests.py
