[project]
name = "django-superform4"
version = "0.5.0"
authors = [
    { name="Gregor Müllegger", email="gregor@mullegger.de" },
]
maintainers = [
    { name="Peter Natale", email="panatale1@gmail.com" },
]
description = "So much easier handling of formsets for Django 4.2+. Drop-in replacement for django-superform"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "django>=4.2",
]
license = { file = "LICENSE" }
keywords = ["formsets", "form fields", "inline formsets"]

[project.urls]
Homepage = "https://github.com/panatale1/django-superform"
Documentation = "https://django-superform4.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_superform"]
